<?xml version="1.0"?>
<package format="2">
  <name>rqt_sine_publisher</name>
  <version>0.0.1</version>
  <description>
    该包包含一个基于 rqt 的插件，用于生成正弦波数据并发布 Float64MultiArray 消息。
  </description>

  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python_qt_binding</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/resource/plugin.xml" />
  </export>
</package>